Vetical aligning the li markers - correcting margin

--- a/css/reads.css
+++ b/css/reads.css
@@ -23,7 +23,7 @@ li {
   display: flex;
   align-items: center;
   list-style-type: none; /* Remove default marker */
-  margin: 0rem;
+  margin: 0.5rem;
 }
 
 ol {
@@ -33,7 +33,6 @@ ol {
 li::before {
   counter-increment: list-counter; /* Increment counter for each <li> */
   content: counter(list-counter) "."; /* Display the counter followed by a dot */
-  margin-right: 3rem;
   width: 2rem; /* Set a fixed width to align numbers */
   text-align: right; /* Right-align the numbers within the width */
   display: inline-block; /* Ensure width and alignment work */
@@ -140,6 +139,9 @@ hr {
   #month_image {
     width: 5rem;
   }
+  li::before {
+    margin-right: 2rem; /* Space between number and text */
+  }
 }
 
 /********** Large devices only **********/
@@ -157,7 +159,7 @@ hr {
     width: 4rem;
   }
   li::before {
-    margin-right: 2rem; /* Space between number and text */
+    margin-right: 1rem; /* Space between number and text */
   }
 }
 
